--- a/DDL_dhlqn/coffee_ddl.ini
+++ b/DDL_dhlqn/coffee_ddl.ini
@@ -66,11 +66,11 @@ procedure_order =
     begin
         if isSalePrice then
             select (select count(*)+1 from sale_detail s2 where s2.sale_price > s1.sale_price) rank,
-                sale.code code, p.pname name, price, salecnt, supply_price, addTax, sale_price, marginRate, margin_price
+                sale.code code, p.name name, price, salecnt, supply_price, addTax, sale_price, marginRate, margin_price
             from sale inner join sale_detail s1 on sale.no = s1.no join product p on sale.code = p.code order by rank;
         else
             select (select count(*)+1 from sale_detail s2 where s2.margin_price > s1.margin_price) rank,
-                sale.code code, p.pname name, price, salecnt, supply_price, addTax, sale_price, marginRate, margin_price
+                sale.code code, p.name name, price, salecnt, supply_price, addTax, sale_price, marginRate, margin_price
             from sale inner join sale_detail s1 on sale.no = s1.no join product p on sale.code = p.code order by rank;
         end if;
     end
